# GTasb3D

./: CMakeLists.txt  readme.md
example/133P/: 133P_ellipsoid.stl  133P_ellipsoid.txt  133P_ellipsoid_0cm.gfdm  133P_ellipsoid_15.5cm.gfdm  133P_ellipsoid_7.5cm.gfdm  GTasb3D  ReadGfdm.m  Volume_SFD.m  active_surface_255_sol0.mat  gfdmpostprocessing.m  output
example/133P/dustmanle0cm_obliquity75_ExampleOutcomes/: gfdm.017740000  gfdm.017760000  gfdm.017760000.gas  gfdm.017840000  gfdm.017840000.gas  gfdm.017920000  gfdm.017920000.gas  gfdm.018000000  gfdm.018000000.gas  gfdm.018080000  gfdm.018080000.gas  gfdm.018160000  gfdm.018160000.gas  gfdm.018240000  gfdm.018240000.gas  gfdm.018320000  gfdm.018320000.gas  gfdm.018400000  gfdm.018400000.gas  gfdm.018480000  gfdm.018480000.gas  gfdm.018560000  gfdm.018560000.gas  gfdm.018640000  gfdm.018640000.gas  gfdm.018720000  gfdm.018720000.gas  gfdm.018800000  gfdm.018800000.gas  gfdm.018880000  gfdm.018880000.gas  gfdm.018960000  gfdm.018960000.gas  gfdm.019040000  gfdm.019040000.gas  gfdm.019120000  gfdm.019120000.gas  gfdm.019200000  gfdm.019200000.gas  gfdm.019280000  (+407 more)
include/: bodyphysics.hpp  common.hpp  fdmnode.hpp  master.hpp  star.hpp  vector3d.hpp
src/: bodyphysics.cpp  fdmnode.cpp  main.cpp  master.cpp
